// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  render={[Function]}
  renderCreated={[Function]}
>
  New - 
  <div>
    render - 
    <div
      className="Component-root-79"
    >
      <div
        className="Component-header-78"
      />
      <div
        className="Component-container-77"
      >
        <h2
          className="MuiTypography-root-32 MuiTypography-h2-45 MuiTypography-alignCenter-55"
        >
          PRIZEY
        </h2>
        <div
          className="Component-caption-75"
        />
        <div
          className="Component-children-76"
        >
          <div
            renderButton={[Function]}
          >
            SignIn - 
            <button
              className="MuiButtonBase-root-29 MuiButton-root-3 MuiButton-contained-14 MuiButton-containedPrimary-15 MuiButton-raised-17 MuiButton-raisedPrimary-18 MuiButton-fullWidth-28"
              disabled={false}
              onBlur={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              renderButton={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiButton-label-4"
              >
                LOGIN
              </span>
              <span
                className="MuiTouchRipple-root-68"
              />
            </button>
            <div
              className="Component-links-2"
            >
              <div
                className="Component-link-1"
                to="/sign-up"
              >
                Link - 
                <span
                  className="MuiTypography-root-32 MuiTypography-caption-42 MuiTypography-colorPrimary-62"
                >
                  Register
                </span>
              </div>
              <div
                className="Component-link-1"
                to="/forgot-password"
              >
                Link - 
                <span
                  className="MuiTypography-root-32 MuiTypography-caption-42 MuiTypography-colorPrimary-62"
                >
                  Forgot your password?
                </span>
              </div>
            </div>
          </div>
        </div>
        <p
          className="MuiTypography-root-32 MuiTypography-body1-41 MuiTypography-alignCenter-55"
        />
      </div>
    </div>
  </div>
  <div>
    renderCreated - 
    <div
      noThrow={true}
      to="/"
    >
      Redirect - 
    </div>
  </div>
</div>
`;

exports[`renders the form correctly 1`] = `
Array [
  <button
    className="MuiButtonBase-root-29 MuiButton-root-3 MuiButton-contained-14 MuiButton-containedPrimary-15 MuiButton-raised-17 MuiButton-raisedPrimary-18 MuiButton-fullWidth-28"
    disabled={false}
    onBlur={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-4"
    >
      LOGIN
    </span>
    <span
      className="MuiTouchRipple-root-68"
    />
  </button>,
  <div
    className="Component-links-2"
  >
    <div
      className="Component-link-1"
      to="/sign-up"
    >
      Link - 
      <span
        className="MuiTypography-root-32 MuiTypography-caption-42 MuiTypography-colorPrimary-62"
      >
        Register
      </span>
    </div>
    <div
      className="Component-link-1"
      to="/forgot-password"
    >
      Link - 
      <span
        className="MuiTypography-root-32 MuiTypography-caption-42 MuiTypography-colorPrimary-62"
      >
        Forgot your password?
      </span>
    </div>
  </div>,
]
`;
